--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,4 @@ encoding//src/com/jcpdev/controller/action/InsertProduct.java=UTF-8
 encoding//src/com/jcpdev/controller/action/LogoutAction.java=UTF-8
 encoding//src/com/jcpdev/dao/MemberDao.java=UTF-8
 encoding//src/com/jcpdev/dao/ProductDao.java=UTF-8
+encoding/<project>=UTF-8
